--- a/elie-agency/elie-agency/package.json
+++ b/elie-agency/elie-agency/package.json
@@ -34,6 +34,7 @@
     "start": "npm run develop",
     "serve": "gatsby serve",
     "clean": "gatsby clean",
+    "preview": "gatsby build && gatsby serve",
     "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\" && exit 1"
   },
   "repository": {
