--- a/elie-agency/elie-agency/package.json
+++ b/elie-agency/elie-agency/package.json
@@ -39,8 +39,8 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/mukau1995/CMS"
-  },
+    "url": "https://github.com/gatsbyjs/gatsby-starter-default"
+    },
   "bugs": {
     "url": "https://github.com/gatsbyjs/gatsby/issues"
   }
